fix modal z-index

--- a/assets/less/innovation-less/modals.less
+++ b/assets/less/innovation-less/modals.less
@@ -1,5 +1,5 @@
 .modal {
-  z-index: 1000;
+  z-index: 1080;
   text-align: center;
   padding: 0!important;
 }
